--- a/foodsoft/app_config.yml
+++ b/foodsoft/app_config.yml
@@ -165,6 +165,11 @@ boernicke:
   database:
     database: foodsoft_boernicke
 
+eca:
+  <<: *defaults
+  database:
+    database: foodsoft_eca
+
 egliswil:
   <<: *defaults
   database:
