Add foodcoop localharvest

--- a/foodsoft/app_config.yml
+++ b/foodsoft/app_config.yml
@@ -230,6 +230,11 @@ lauterleben:
   database:
     database: foodsoft_lauterleben
 
+localharvest:
+  <<: *defaults
+  database:
+    database: foodsoft_localharvest
+
 luzern:
   <<: *defaults
   database:
