--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -24,7 +24,9 @@ frontend https
 
   use_backend phpmyadmin if { path_beg /phpmyadmin }
   use_backend sharedlists if { path_beg /sharedlists }
+  use_backend github if { hdr(host) -i foodcoops.net }
 
+  http-request redirect prefix   https://foodcoops.net                    code 301 if { hdr(host) -i www.foodcoops.net }
   http-request redirect location https://app.foodcoops.at/allmunde        code 301 if { path_beg /allmunde }
   http-request redirect location https://app.foodcoops.at/bokufoodcoop    code 301 if { path_beg /bokufoodcoop }
   http-request redirect location https://app.foodcoops.at/einkorn         code 301 if { path_beg /einkorn }
@@ -53,6 +55,10 @@ backend certbot
 
 backend foodsoft
   server foodsoft foodsoft:3000
+
+backend github
+  http-request set-header Host foodcoops.github.io
+  server github foodcoops.github.io:443 ssl verify none
 
 backend phpmyadmin
   reqrep ^([^\ ]*\ )/phpmyadmin/?(.*) \1/\2
