Add foodcoop mannheim

--- a/foodsoft/app_config.yml
+++ b/foodsoft/app_config.yml
@@ -245,6 +245,11 @@ luzern:
   database:
     database: foodsoft_luzern
 
+mannheim:
+  <<: *defaults
+  database:
+    database: foodsoft_mannheim
+
 meierei:
   <<: *defaults
   database:
