Add foodcoop lostfood

--- a/foodsoft/app_config.yml
+++ b/foodsoft/app_config.yml
@@ -250,6 +250,11 @@ localharvest:
   database:
     database: foodsoft_localharvest
 
+lostfood:
+  <<: *defaults
+  database:
+    database: foodsoft_lostfood
+
 luzern:
   <<: *defaults
   database:
