--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -24,41 +24,14 @@ frontend https
 
   use_backend phpmyadmin if { path_beg /phpmyadmin }
   use_backend sharedlists if { path_beg /sharedlists }
-  use_backend github if { hdr(host) -i foodcoops.net }
 
-  http-request redirect prefix   https://foodcoops.net                    code 301 if { hdr(host) -i www.foodcoops.net }
-  http-request redirect location https://app.foodcoops.at/allmunde        code 301 if { path_beg /allmunde }
-  http-request redirect location https://app.foodcoops.at/bokufoodcoop    code 301 if { path_beg /bokufoodcoop }
-  http-request redirect location https://app.foodcoops.at/einkorn         code 301 if { path_beg /einkorn }
-  http-request redirect location https://foodsoft.fcschinke09.de          code 301 if { path_beg /fcschinke09 }
-  http-request redirect location https://app.foodcoops.at/franckkistl     code 301 if { path_beg /franckkistl }
-  http-request redirect location https://app.foodcoops.at/fresskorb       code 301 if { path_beg /fresskorb }
-  http-request redirect location https://app.foodcoops.at/fresskultur     code 301 if { path_beg /fresskultur }
-  http-request redirect location https://app.foodcoops.at/krautkoopf      code 301 if { path_beg /graz }
-  http-request redirect location https://app.foodcoops.at/hokoido         code 301 if { path_beg /hokoido }
-  http-request redirect location https://app.foodcoops.at/kastanie77      code 301 if { path_beg /kastanie77 }
-  http-request redirect location https://app.foodcoops.at/kitting         code 301 if { path_beg /kitting }
-  http-request redirect location https://app.foodcoops.at/ekglinz         code 301 if { path_beg /linz }
-  http-request redirect location https://app.foodcoops.at/loewenzahn      code 301 if { path_beg /meidling }
-  http-request redirect location https://app.foodcoops.at/pressbaum       code 301 if { path_beg /pressbaum }
-  http-request redirect location https://app.foodcoops.at/pumpkin         code 301 if { path_beg /pumpkin }
-  http-request redirect location https://app.foodcoops.at/schraubenfabrik code 301 if { path_beg /schraubenfabrik }
-  http-request redirect location https://app.foodcoops.at/sierning        code 301 if { path_beg /sierning }
-  http-request redirect location https://app.foodcoops.at/dspeis          code 301 if { path_beg /speis }
-  http-request redirect location https://app.foodcoops.at/stadtkern       code 301 if { path_beg /stadtkern }
-  http-request redirect location https://app.foodcoops.at/radieschenbund  code 301 if { path_beg /radieschenbund }
-  http-request redirect location https://app.foodcoops.at/ruebezahl17     code 301 if { path_beg /ruebezahl17 }
-  http-request redirect location https://app.foodcoops.at/satteins        code 301 if { path_beg /vorarlberg }
+  http-request redirect prefix https://order.vokomokum.nl code 301 if { hdr(host) -i vers.vokomokum.nl }
 
 backend certbot
   server certbot certbot:80
 
 backend foodsoft
   server foodsoft foodsoft:3000
-
-backend github
-  http-request set-header Host foodcoops.github.io
-  server github foodcoops.github.io:443 ssl verify none
 
 backend phpmyadmin
   reqrep ^([^\ ]*\ )/phpmyadmin/?(.*) \1/\2
