--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -18,14 +18,15 @@ frontend https
   bind *:443 ssl crt /certs
   default_backend foodsoft
 
+  http-request redirect prefix "https://${HOSTNAME_ORDER}" code 301 if { hdr(host) -i "vers.${DOMAIN}" }
+
   http-response set-header Strict-Transport-Security "max-age=16000000;"
   option forwardfor
   reqadd X-Forwarded-Proto:\ https
 
+  use_backend members if { hdr(host) -i "${HOSTNAME_MEMBERS}" }
   use_backend phpmyadmin if { path_beg /phpmyadmin }
   use_backend sharedlists if { path_beg /sharedlists }
-
-  http-request redirect prefix https://order.vokomokum.nl code 301 if { hdr(host) -i vers.vokomokum.nl }
 
 backend certbot
   server certbot certbot:80
@@ -33,8 +34,11 @@ backend certbot
 backend foodsoft
   server foodsoft foodsoft:3000
 
+backend members
+  server members members:6543
+
 backend phpmyadmin
-  reqrep ^([^\ ]*\ )/phpmyadmin/?(.*) \1/\2
+  reqirep  ^(GET|POST|HEAD)\ /phpmyadmin/(.*) \1\ /\2
   server phpmyadmin phpmyadmin:80
 
 backend sharedlists
