--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,12 @@ services:
     image: foodcoops/certbot:latest
     restart: always
     environment:
-      CERTBOT_DOMAINS: |-
-        ${HOSTNAME},vers.${DOMAIN}
-      CERTBOT_EMAIL: systems-all@${DOMAIN}
-      CERTBOT_TOUCH_FILE: /triggers/reload-certs
+      - CERTBOT_DISABLED
+      - CERTBOT_EMAIL=systems-all@${DOMAIN}
+      - CERTBOT_TOUCH_FILE=/triggers/reload-certs
+      - CERTBOT_DOMAINS=|-
+          ${HOSTNAME_ORDER},vers.${DOMAIN}
+          ${HOSTNAME_MEMBERS}
     volumes:
       - certs:/certs
       - triggers:/triggers
@@ -20,13 +22,16 @@ services:
       - DATABASE_URL=mysql2://foodsoft:${FOODSOFT_DB_PASSWORD}@mariadb/foodsoft_vkmkm?encoding=utf8mb4
       - EMAIL_SENDER=noreply@${DOMAIN}
       #- ERROR_RECIPIENTS=
-      - HOSTNAME
+      - HOSTNAME=${HOSTNAME_ORDER}
+      - HOSTNAME_MEMBERS
+      - DOMAIN
       - QUEUE=foodsoft_notifier
       - REDIS_URL=redis://redis:6379
       - SECRET_KEY_BASE=${FOODSOFT_SECRET_KEY_BASE}
       - SHAREDLISTS_DATABASE_URL=mysql2://foodsoft:${FOODSOFT_DB_PASSWORD}@mariadb/sharedlists?encoding=utf8mb4
+      - VOKOMOKUM_CLIENT_SECRET
       - MAILER_PREFIX=foodsoft+
-      - SMTP_DOMAIN=${HOSTNAME}
+      - SMTP_DOMAIN=${HOSTNAME_ORDER}
       - SMTP_ADDRESS
       - SMTP_PORT
       - SMTP_USER_NAME
@@ -47,11 +52,21 @@ services:
       - SMTP_SERVER_PORT=2525
       - SMTP_SERVER_HOST=0.0.0.0
 
+  members:
+    build: members
+    environment:
+      - APPLICATION_URL=https://${HOSTNAME_MEMBERS}
+      - REDIRECT_URLS=https://${HOSTNAME_ORDER}/f/
+      - VOKOMOKUM_CLIENT_SECRET
+
   haproxy:
     build: haproxy
     restart: always
     environment:
       - HAPROXY_RELOAD_FILE=/triggers/reload-certs
+      - DOMAIN
+      - HOSTNAME_ORDER
+      - HOSTNAME_MEMBERS
     ports:
       - "80:80"
       - "443:443"
@@ -71,7 +86,7 @@ services:
     image: phpmyadmin/phpmyadmin
     restart: always
     environment:
-      - PMA_ABSOLUTE_URI=https://${HOSTNAME}/phpmyadmin/
+      - PMA_ABSOLUTE_URI=https://${HOSTNAME_ORDER}/phpmyadmin/
       - PMA_HOST=mariadb
 
   redis:
@@ -85,7 +100,7 @@ services:
       - DATABASE_URL=mysql2://sharedlists:${SHAREDLISTS_DB_PASSWORD}@mariadb/sharedlists?encoding=utf8mb4
       - SECRET_TOKEN=${SHAREDLISTS_SECRET_KEY_BASE}
       - RAILS_RELATIVE_URL_ROOT=/sharedlists
-      - MAILER_DOMAIN=${HOSTNAME}
+      - MAILER_DOMAIN=${HOSTNAME_ORDER}
       - MAILER_PREFIX=sharedlists+
     volumes:
       - supplier_assets:/usr/src/app/supplier_assets
@@ -105,8 +120,8 @@ services:
     build: smtp
     restart: always
     environment:
-      - HOSTNAME
-      - DOMAIN=${HOSTNAME}
+      - DOMAIN
+      - HOSTNAME=${HOSTNAME_ORDER}
       - POSTFIX_RELOAD_FILE=/triggers/reload-certs
     ports:
       - "25:25"
