--- a/smtp/Dockerfile
+++ b/smtp/Dockerfile
@@ -1,10 +1,10 @@
 FROM alpine:3.5
 
-RUN apk add --no-cache postfix rsyslog ca-certificates && \
+RUN apk add --no-cache postfix postfix-mysql rsyslog ca-certificates && \
     update-ca-certificates
 
 COPY rsyslog.conf /etc/
-COPY main.cf /etc/postfix/
+COPY *.cf /etc/postfix/
 COPY docker-entrypoint.sh reload-postfix.sh /
 
 ENTRYPOINT ["/docker-entrypoint.sh"]
