--- a/members/production.ini
+++ b/members/production.ini
@@ -11,8 +11,7 @@ pyramid.includes = pyramid_tm
 
 sqlalchemy.url = mysql+pymysql://members:secret@mariadb/members
 
-#vokomokum.mail_exec = /usr/sbin/exim
-vokomokum.mail_exec = /bin/false
+vokomokum.mail_exec = /usr/sbin/sendmail
 vokomokum.mail_folder = %(here)s/mails
 vokomokum.mail_sender = systems@vokomokum.nl
 
