--- a/members/Dockerfile
+++ b/members/Dockerfile
@@ -2,7 +2,7 @@ FROM nhoening/vokomokum-members
 
 RUN export DEBIAN_FRONTEND=noninteractive && \
     apt-get update && \
-    apt-get install -y mysql-client && \
+    apt-get install --no-install-recommends -y mysql-client ssmtp && \
     rm -Rf /var/lib/apt/lists/* /var/cache/apt/*
 
 RUN pip install pymysql
@@ -10,6 +10,7 @@ RUN pip install pymysql
 # Fix: include protocol in whitelist (because it's http now, and we do https)
 RUN sed -E -i "s#(startswith\\(')http://#\\1#" members/views/base.py
 
+COPY ssmtp.conf /etc/ssmtp/
 COPY production.ini dbsetup.py dbsetup.sql docker-entrypoint.sh ./
 
 ENTRYPOINT ["./docker-entrypoint.sh"]
