--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -5,8 +5,12 @@ defaults
   mode http
 
 global
-  ssl-default-bind-ciphers DEFAULT:!EXPORT:!RC4
-  tune.ssl.default-dh-param 2048
+  # https://hynek.me/articles/hardening-your-web-servers-ssl-ciphers/
+  tune.ssl.default-dh-param 2048 # put DH parameters in certificate file against LOGJAM
+  ssl-default-bind-ciphers ECDH+AESGCM:ECDH+CHACHA20:DH+AESGCM:ECDH+AES256:DH+AES256:ECDH+AES128:DH+AES:RSA+AESGCM:RSA+AES:!aNULL:!MD5:!DSS:!RSA
+  ssl-default-bind-options no-sslv3 no-tls-tickets
+  ssl-default-server-ciphers ECDH+AESGCM:ECDH+CHACHA20:DH+AESGCM:ECDH+AES256:DH+AES256:ECDH+AES128:DH+AES:RSA+AESGCM:RSA+AES:!aNULL:!MD5:!DSS:!RSA
+  ssl-default-server-options no-sslv3 no-tls-tickets
 
 frontend http
   bind *:80
@@ -20,7 +24,7 @@ frontend https
 
   http-request redirect prefix "https://${HOSTNAME_ORDER}" code 301 if { hdr(host) -i "vers.${DOMAIN}" }
 
-  http-response set-header Strict-Transport-Security "max-age=16000000;"
+  http-response set-header Strict-Transport-Security max-age=15768000 # HSTS 6 months
   option forwardfor
   reqadd X-Forwarded-Proto:\ https
 
