--- a/smtp/Dockerfile
+++ b/smtp/Dockerfile
@@ -1,4 +1,4 @@
-FROM alpine:3.5
+FROM alpine:3.9
 
 RUN apk add --no-cache postfix postfix-mysql rsyslog ca-certificates && \
     update-ca-certificates
@@ -8,5 +8,5 @@ COPY *.cf /etc/postfix/
 COPY docker-entrypoint.sh reload-postfix.sh /
 
 ENTRYPOINT ["/docker-entrypoint.sh"]
-CMD /usr/lib/postfix/master & \
+CMD /usr/libexec/postfix/master & \
     /usr/sbin/rsyslogd -n
